Update the font size and others

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         </div>
                         <div id="overallSmallText">
                             <p> Current </p>
-                            <p style="color: #dcfcb8; font-weight: 500;"> ODMTS </p>
+                            <p style="color: #dcfcb8; font-size: 1.6vmin; font-weight: 500;"> ODMTS </p>
                         </div>
                         <div id="overallValue">
                             <p> <span id="overallAccBefore"></b> </span>%</p>
@@ -140,12 +140,12 @@
                         <div class='sliderAccContentAbsolute'>
                             <p style="margin-bottom:3px;"> Accessible within <span style="font-weight:600" id="sliderValueAcc_abs"> </span> minutes</p>
                             <input id='myRangeAcc_abs' class="slider" type="range" min="30" max="75" value="45" step="3">
-                            <p style="text-align:left; margin-bottom: 0em; margin-top: 0.2em; font-size: calc(1rem - 0.15vw); font-weight: 100;"> 30 minutes <span style="float:right"> 75 minutes </span> </p>
+                            <p style="text-align:left; margin-bottom: 0em; margin-top: 0.2em; font-size: 1.4vmin; font-weight: 100;"> 30 minutes <span style="float:right"> 75 minutes </span> </p>
                         </div>
                         <div class='sliderAccContentRelative'>
                             <p style="margin-bottom:3px;"> Accessible within <span style="font-weight:600" id="sliderValueAcc_rel"> </span> X driving time</p>
                             <input id='myRangeAcc_rel' class="slider" type="range" min="1" max="3" value="2" step="0.2">
-                            <p style="text-align:left; margin-bottom: 0em; margin-top: 0.2em; font-size: calc(1rem - 0.15vw); font-weight: 100;"> Equal <span style="float:right"> 3 times </span> </p>
+                            <p style="text-align:left; margin-bottom: 0em; margin-top: 0.2em; font-size: 1.4vmin; font-weight: 100;"> Equal <span style="float:right"> 3 times </span> </p>
                         </div>
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                         </div>
                         <div id='gapSmallText'>
                             <p> Current </p>
-                            <p style="color: #dcfcb8; font-size: calc(1rem); font-weight: 500;"> ODMTS </p>
+                            <p style="color: #dcfcb8; font-size: 1.6vmin; font-weight: 500;"> ODMTS </p>
                         </div>
                         <div id='gapValue'>
                             <p> <span id="gapValueBefore"></b> </span> </p>
@@ -218,7 +218,7 @@
                         </div>
                         <div id="giniSmallText">
                             <p> Current </p>
-                            <p style="color: #dcfcb8; font-size: calc(1rem); font-weight: 500;"> ODMTS </p>
+                            <p style="color: #dcfcb8; font-size: 1.6vmin; font-weight: 500;"> ODMTS </p>
                         </div>
                         <div id="giniValue-wrapper">
                             <div id="giniValue">
@@ -227,9 +227,9 @@
                                 <p style="color: #e34b4b; margin-top: 0px !important; margin-bottom: 0px !important;"> <span id="giniBeforeHigh"></b> </span> </p>
                             </div>
                             <div id="giniValue">
-                                <p style="font-size: calc(1rem - 0.2vw); font-weight: 300; text-align: center;"> Low-demand neighborhoods </p>
-                                <p style="font-size: calc(1rem - 0.2vw); font-weight: 300; text-align: center;"> Mid-demand neighborhoods </p>
-                                <p style="font-size: calc(1rem - 0.2vw); font-weight: 300; text-align: center;"> High-demand neighborhoods </p>
+                                <p style="font-size: 1.4vmin; font-weight: 300; text-align: center; margin-top: -1vh !important; margin-bottom: 0vh !important;"> Low-demand neighborhoods </p>
+                                <p style="font-size: 1.4vmin; font-weight: 300; text-align: center; margin-top: 1vh !important; margin-bottom: 1vh !important;"> Mid-demand neighborhoods </p>
+                                <p style="font-size: 1.4vmin; font-weight: 300; text-align: center; margin-top: 0vh !important; margin-bottom: -1vh !important;"> High-demand neighborhoods </p>
                             </div>
                             <div id="giniValue">
                                 <p style="color: #fffde6; margin-top: 0px !important; margin-bottom: 0px !important;"> <span id="giniAfterLow"></b> </span> </p>
@@ -312,9 +312,9 @@
                     </div>
                 </div>
                 <div id="legend-wrapper">
-                    <div class="legendInfo">
-                        <a class="button" href="#popup3"><span class="material-symbols-outlined">Help</span></a>
-                    </div>
+                </div>
+                <div class="legendInfo">
+                    <a class="button" href="#popup3"><span class="material-symbols-outlined">Help</span></a>
                 </div>
                 <div id="popup1" class="overlay">
                     <div class="popup">
@@ -336,7 +336,7 @@
                             </div>
                             <div id='gapSmallText'>
                                 <p> Current </p>
-                                <p style="color: #dcfcb8; font-weight: 300;"> ODMTS </p>
+                                <p style="color: #dcfcb8; font-size: 1.6vmin; font-weight: 300;"> ODMTS </p>
                             </div>
                             <div id='gapValue'>
                                 <p> <span id="gapValueBefore2"></b> </span> </p>
@@ -369,7 +369,7 @@
                             </div>
                             <div id="giniSmallText">
                                 <p> Current </p>
-                                <p style="color: #dcfcb8; font-weight: 300;"> ODMTS </p>
+                                <p style="color: #dcfcb8; font-size: 1.6vmin; font-weight: 300;"> ODMTS </p>
                             </div>
                             <div id="giniValue-wrapper">
                                 <div id="giniValue">
@@ -378,9 +378,9 @@
                                     <p style="color: #e34b4b; margin-top: 0px !important; margin-bottom: 0px !important;"> <span id="giniBeforeHigh2"></b> </span> </p>
                                 </div>
                                 <div id="giniValue">
-                                    <p style="font-size: calc(1rem - 0.2vw); font-weight: 300; text-align: center;"> Low-demand neighborhoods </p>
-                                    <p style="font-size: calc(1rem - 0.2vw); font-weight: 300; text-align: center;"> Mid-demand neighborhoods </p>
-                                    <p style="font-size: calc(1rem - 0.2vw); font-weight: 300; text-align: center;"> High-demand neighborhoods </p>
+                                    <p style="font-size: 1.4vmin; font-weight: 300; text-align: center; margin-top: -1vh !important; margin-bottom: 0vh !important;"> Low-demand neighborhoods </p>
+                                    <p style="font-size: 1.4vmin; font-weight: 300; text-align: center; margin-top: 1vh !important; margin-bottom: 1vh !important;"> Mid-demand neighborhoods </p>
+                                    <p style="font-size: 1.4vmin; font-weight: 300; text-align: center; margin-top: 0vh !important; margin-bottom: -1vh !important;"> High-demand neighborhoods </p>
                                 </div>
                                 <div id="giniValue">
                                     <p style="color: #fffde6; margin-top: 0px !important; margin-bottom: 0px !important;"> <span id="giniAfterLow2"></b> </span> </p>
