--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Transit Equity Dashboard</title>
+    <title>Atlanta's Transit Equity</title>
+
     <script defer src="js/d3.js"></script>
 
     <script defer src="js/page.js"></script>
@@ -12,9 +13,6 @@
 
     <script defer src="js/scroller.js"></script>
     <script defer src="js/sections_sample.js"></script>
-
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src = 'https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js'></script> -->
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
