--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <div class="focus--mask-inner">Justice</div>
                 </div>
             </div>  -->
-            <h1 class="mast-subtitle">:Current benchmarks and future possibilities</h1>
+            <h1 class="mast-subtitle">Current benchmarks and future possibilities</h1>
             <h3 class="mast-text">An interactive tool that compares On-demand Multimodal Transit System (ODMTS) and the conventional transit system in Atlanta in terms of 1) overall accessibility and 2) transit equity/equality</h3>
         </section>
 
