--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <title>Atlanta's Transit Equity</title>
 
-    <script defer src="js/d3.js"></script>
+    <script async src="js/d3.js"></script>
 
-    <script defer src="js/page.js"></script>
-    <script defer src="js/accessibility.js"></script>
-    <script defer src="js/equity.js"></script>
+    <script ayncs src="js/scroller.js"></script>
+    <script async src="js/sections_sample.js"></script>
 
-    <script defer src="js/scroller.js"></script>
-    <script defer src="js/sections_sample.js"></script>
+    <script async src="js/accessibility.js"></script>
+    <script async src="js/page.js"></script>
+    <script async src="js/equity.js"></script>
+
+
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -312,7 +314,6 @@
                 <div id="popup1" class="overlay">
                     <div class="popup">
                         <a class="close" href="#mapWrapperEqu">&times;</a>
-                        <h4 class="title">How is the 'Transit Inequity' measured?</h4>
                         <div class="content">
                             <ul>
                             <li>The numeric values are Gap indices that summarize the overall gap between transit supply (i.e., accessibility) and demand, which is measured by:
@@ -343,7 +344,6 @@
                 </div>
                 <div id="popup2" class="overlay">
                     <div class="popup" style="top: 50%;">
-                        <h4 class="title">How is the 'Transit Inequality' measured?</h4>
                         <a class="close" href="#mapWrapperEqu">&times;</a>
                         <div class="content">
                             <ul>
@@ -387,7 +387,6 @@
                 </div>
                 <div id="popup3" class="overlay">
                     <div class="popup" style="top: 47%; left: 18%;">
-                        <h4 class="title">How does the legend work?</h4>
                         <a class="close" href="#mapWrapperEqu">&times;</a>
                         <div class="content">
                             <ul>
