Not mobile-friendly

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     <script async src="js/page.js"></script>
     <script async src="js/equity.js"></script>
 
-
-
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 
@@ -25,6 +23,8 @@
     <link href="css/accessibility.css" rel="stylesheet">
 
     <link rel="shortcut icon" href="#">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 </head>
 
@@ -47,6 +47,10 @@
 <link rel="stylesheet" href="./lib/nice_select2/css/nice-select2.css" />
 
 <body>
+    <div id="warning">
+        <i class="material-icons" style="font-size: 20vmin">warning</i>           
+        <h7>This website is not mobile-friendly. Please visit again on your PC.</h7>
+    </div>
     <div id="graphic">
         <section class="step masthead" id="masterhead">
             <div class="logo-wrapper">
