--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>Atlanta's Transit Equity</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
     <script async src="js/d3.js"></script>
 
     <script ayncs src="js/scroller.js"></script>
