--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Atlanta's Transit Equity</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
 
     <script async src="js/d3.js"></script>
 
