--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
 <body>
     <div id="warning">
-        <i class="material-icons" style="font-size: 20vmin">warning</i>           
-        <h7>This website is not mobile-friendly. Please visit again on your PC.</h7>
+        <!-- <i class="material-icons" style="font-size: 20vmin">warning</i>           
+        <h7>This website is not mobile-friendly. Please visit again on your PC.</h7> -->
     </div>
     <div id="graphic">
         <section class="step masthead" id="masterhead">
