Insert two maps at the same time

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
     <script async src="js/d3.js"></script>
 
-    <script defer src="js/scroller.js"></script>
+    <script async src="js/scroller.js"></script>
     <!-- <script async src="js/sections_sample.js"></script> -->
-    <script defer src="js/vis.js"></script>
+    <script async src="js/vis.js"></script>
 
     <script async src="js/accessibility.js"></script>
     <script async src="js/page.js"></script>
