--- a/index.html
+++ b/index.html
@@ -7,15 +7,23 @@
 
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
 
-    <script async src="js/d3.js"></script>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.2/mapbox-gl-geocoder.min.js"></script>
+    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.2/mapbox-gl-geocoder.css" type="text/css">
 
-    <script async src="js/scroller.js"></script>
-    <!-- <script async src="js/sections_sample.js"></script> -->
-    <script async src="js/vis.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <script async src="js/page.js"></script>
-    <script async src="js/accessibility.js"></script>
-    <script async src="js/equity.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://d3js.org/d3-hsv.v0.1.min.js"></script>
+
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
+    <script src="./lib/nice_select2/js/nice-select2.js"></script>
+    <link rel="stylesheet" href="./lib/nice_select2/css/nice-select2.css" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -31,25 +39,29 @@
 
 </head>
 
-<script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
-<link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
-<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.2/mapbox-gl-geocoder.min.js"></script>
-<link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.2/mapbox-gl-geocoder.css" type="text/css">
-
-<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
-<script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="https://d3js.org/d3-hsv.v0.1.min.js"></script>
-
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-
-<script src="./lib/nice_select2/js/nice-select2.js"></script>
-<link rel="stylesheet" href="./lib/nice_select2/css/nice-select2.css" />
+<script>
+      // // reload the webpage since the map is not loaded
+  // window.onload = function() {
+  //   if(!window.location.hash) {
+  //     window.location = window.location + '#loaded';
+  //     window.location.reload();
+  //   }
+  // }
+  // window.onload();
+</script>
 
 <body>
+
+    <script async src="js/d3.js"></script>
+
+    <script async src="js/scroller.js"></script>
+    <!-- <script async src="js/sections_sample.js"></script> -->
+    <script async src="js/vis.js"></script>
+
+    <script async src="js/page.js"></script>
+    <script async src="js/accessibility.js"></script>
+    <script async src="js/equity.js"></script>
+
     <div id="warning">
         <i class="material-icons" style="font-size: 20vmin">warning</i>           
         <h7>This website is not mobile-friendly. Please visit again on your PC.</h7>
@@ -448,3 +460,5 @@
     </div>
 
 </body>
+
+</html>
