--- a/index.html
+++ b/index.html
@@ -9,14 +9,6 @@
 
     <script async src="js/d3.js"></script>
 
-    <script async src="js/scroller.js"></script>
-    <!-- <script async src="js/sections_sample.js"></script> -->
-    <script async src="js/vis.js"></script>
-
-    <script async src="js/accessibility.js"></script>
-    <script async src="js/page.js"></script>
-    <script async src="js/equity.js"></script>
-
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 
@@ -28,8 +20,6 @@
     <link rel="shortcut icon" href="#">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
-    <script defer src="js/load.js"></script>
 
 </head>
 
@@ -449,4 +439,16 @@
 
     </div>
 
+    <script defer src="js/scroller.js"></script>
+    <!-- <script async src="js/sections_sample.js"></script> -->
+    <script defer src="js/vis.js"></script>
+
+    <script defer src="js/accessibility.js"></script>
+    <script defer src="js/page.js"></script>
+    <script defer src="js/equity.js"></script>
+
+    <script defer src="js/load.js"></script>
+
 </body>
+
+</html>
