--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <!-- Theme CSS - Includes Bootstrap -->
     <link href="css/page.css" rel="stylesheet">
     <link href="css/equity.css" rel="stylesheet">
@@ -50,6 +52,9 @@
 <link rel="stylesheet" href="./lib/nice_select2/css/nice-select2.css" />
 
 <body>
+    <div class="loader">
+        <div></div>
+    </div>
     <div id="warning">
         <i class="material-icons" style="font-size: 20vmin">warning</i>           
         <h7>This website is not mobile-friendly. Please visit again on your PC.</h7>
