--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
                                 <p style="color: #e34b4b; margin-top: 0px !important; margin-bottom: 0px !important;"> <span id="giniBeforeHigh"></b> </span> </p>
                             </div>
                             <div id="giniValue">
-                                <p style="font-size: 1.4vmin; font-weight: 300; text-align: center; margin-top: -1vh !important; margin-bottom: 0vh !important;"> Low-demand neighborhoods </p>
-                                <p style="font-size: 1.4vmin; font-weight: 300; text-align: center; margin-top: 1vh !important; margin-bottom: 1vh !important;"> Mid-demand neighborhoods </p>
-                                <p style="font-size: 1.4vmin; font-weight: 300; text-align: center; margin-top: 0vh !important; margin-bottom: -1vh !important;"> High-demand neighborhoods </p>
+                                <p style="font-size: 13px; font-weight: 300; text-align: center; margin-top: -1vh !important; margin-bottom: 0vh !important;"> Low-demand neighborhoods </p>
+                                <p style="font-size: 13px; font-weight: 300; text-align: center; margin-top: 1vh !important; margin-bottom: 1vh !important;"> Mid-demand neighborhoods </p>
+                                <p style="font-size: 13px; font-weight: 300; text-align: center; margin-top: 0vh !important; margin-bottom: -1vh !important;"> High-demand neighborhoods </p>
                             </div>
                             <div id="giniValue">
                                 <p style="color: #fffde6; margin-top: 0px !important; margin-bottom: 0px !important;"> <span id="giniAfterLow"></b> </span> </p>
